test/should-pass/pass/kw-args-method-w-arg-named-args/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass k1
{
  method init(object-t self, char8-t** args : {}) -> object-t {
    self = $init(super);
    //
    return self;
  }
}

int-t main() {
  return 0;
}
