test/should-fail/method-param-name-klass-compile/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass k1
{
  // bug: parameter named 'klass'
  method object-t init(object-t self, object-t klass : null)
  {
    self = $init(super);
    return self;
  }
}

int-t main()
{
  object-t o = make(k1::klass);
  return 0;
}
